--- a/client-react/package.json
+++ b/client-react/package.json
@@ -12,8 +12,12 @@
   "dependencies": {
     "@tailwindcss/vite": "^4.1.17",
     "axios": "^1.13.2",
+    "i18next": "^25.6.3",
+    "i18next-http-backend": "^3.0.2",
+    "qrcode.react": "^4.2.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
+    "react-i18next": "^16.3.5",
     "react-router-dom": "^7.9.6",
     "tailwindcss": "^4.1.17"
   },
